--- a/gb/17/2/8/n8788756.md
+++ b/gb/17/2/8/n8788756.md
@@ -1,14 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加拿大移民爱扎堆大都市 周边地区也受捧</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/02/^EB9DAF841FEEB2B0112EF1B2578548F62C8AE6AB54D5D6ED97^pimgpsh_fullsize_distr-600x400.jpg" />
-<h6>图：82%的加拿大人口生活在全国的大中城市，七国集团中人口聚集度最高之一。（大纪元）
-</h6>
+<h6>图：82%的加拿大人口生活在全国的大中城市，七国集团中人口聚集度最高之一。（大纪元）</h6>
 <hr>
-<p>【大纪元2017年02月09日讯】（大纪元记者季薇多伦多编译报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>统计局最新公布的2016年人口普查数据显示，加国的3,515万人口聚居较大的都市及其近郊，而小城市越来越少。仅多伦多、蒙特利尔和温哥华就容纳了1,250万，其中近半落户多伦多及其周边地区。</p>
-<p>据CTV报导，加统计局2月8日公布的2016年人口普查之人口与住宅报告称，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>再次成为七国集团中人口增长最快的国家。该局还将在5月公布年龄与性别报告，并陆续公布总计7份报告。</p>
-<p>8日数据显示，82%的加拿大人口生活在全国的大中城市，七国集团中人口聚集度最高之一。选择定居在都市中心而非乡村社区的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>，带动了这一变化。年轻的专业人士和老龄化的婴儿潮一代，都更喜欢市中心的公寓生活。</p>
+<p>【大纪元2017年02月09日讯】（大纪元记者季薇多伦多编译报导）加拿大统计局最新公布的2016年人口普查数据显示，加国的3,515万人口聚居较大的都市及其近郊，而小城市越来越少。仅多伦多、蒙特利尔和温哥华就容纳了1,250万，其中近半落户多伦多及其周边地区。</p>
+<p>据CTV报导，加统计局2月8日公布的2016年人口普查之人口与住宅报告称，加拿大再次成为七国集团中人口增长最快的国家。该局还将在5月公布年龄与性别报告，并陆续公布总计7份报告。</p>
+<p>8日数据显示，82%的加拿大人口生活在全国的大中城市，七国集团中人口聚集度最高之一。选择定居在都市中心而非乡村社区的移民，带动了这一变化。年轻的专业人士和老龄化的婴儿潮一代，都更喜欢市中心的公寓生活。</p>
 <p>该局人口统计部主任马特尔（Laurent Martel）说：“位于人口普查大都市区边缘的城镇的增长速度，比大都市区的城市还要快。同样，靠近大都市的乡村的人口增长速度，也比远离大都市的乡村快，都市化迹象显着。”</p>
 <p><strong>成功而伤脑筋</strong></p>
 <p>卑诗省的基隆拿（Kelowna）一直鼓励市民聚居在已经建成的市区，遏制向外扩张。2011年～2016年五年间，该市人口增长8.4%，在全国大都市区中第六快，人口达194,882人 。</p>
@@ -16,7 +15,7 @@
 <p><strong>保持规模难</strong></p>
 <p>不是所有的城市都像基隆拿那样一心想着遏制扩张，有的仅仅希望能够保持住现有的规模。新斯科舍省的几个小城镇，如新格拉斯哥（New Glasgow）、坎伯兰（Cumberland）和迪比（Digby），因为远离都市中心，人口不升反降。</p>
 <p>新布伦斯瑞克省的圣约翰（Saint John），人口在2011年和2016年间，也从70,065人降至67,575人。该省人口普降0.5%，是2006年以来唯一出现人口负增长的省份。</p>
-<p><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>砝码压秤</strong></p>
+<p><strong>移民砝码压秤</strong></p>
 <p>大西洋地区，因更少的移民前往和更多的人迁徙，人口增长整体放缓。但亚伯塔省的人口增长幅度是全国平均水平的两倍多，在连续三次人口普查中领先各省。曼尼托巴省人口增5.8%，80年来首次超过全国平均水平，这要归功于新移民落户。</p>
 <p>目前近1/3的加拿大人居住在西部，有史以来最多。卡尔加里和埃德蒙顿名列2011年～2016年间人口增长最快城市之中，卡尔加里更超越渥太华，成为全国第四大城市。</p>
 <p>魁北克省人口超过了800万，安省缓增至1,340万，两省人口仍占全国人口的61.5%。五年间全国人口每年缓增约1%，增加了170万人。如果没有新移民大量涌入，那会更低。加拿大统计局称，其中新移民占2/3。</p>
@@ -33,356 +32,180 @@
 <td width="247"><strong><b>常住居民私人住宅数（所）</b></strong></td>
 <td width="203"><strong><b>2011</b></strong><strong><b>～</b></strong><strong><b>?2016</b></strong><strong><b>涨幅</b></strong>（%）</td>
 </tr>
-<tr>
 <td width="259"><strong><b>Canada</b></strong></td>
 <td width="247"><strong><b>14,072,079</b></strong></td>
 <td width="203"><strong><b>5.6</b></strong></td>
-</tr>
-<tr>
 <td width="259"><strong><b>Newfoundland and Labrador</b></strong></td>
 <td width="247">218,673</td>
 <td width="203">4.7</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Prince Edward Island</b></strong></td>
 <td width="247">59,472</td>
 <td width="203">5.3</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Nova Scotia</b></strong></td>
 <td width="247">401,990</td>
 <td width="203">3.0</td>
-</tr>
-<tr>
 <td width="259"><strong><b>New Brunswick</b></strong></td>
 <td width="247">319,773</td>
 <td width="203">1.8</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Quebec</b></strong></td>
 <td width="247">3,531,663</td>
 <td width="203">4.0</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Ontario</b></strong></td>
 <td width="247">5,169,174</td>
 <td width="203">5.8</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Manitoba</b></strong></td>
 <td width="247">489,050</td>
 <td width="203">4.9</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Saskatchewan</b></strong></td>
 <td width="247">432,622</td>
 <td width="203">5.6</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Alberta</b></strong></td>
 <td width="247">1,527,678</td>
 <td width="203">9.9</td>
-</tr>
-<tr>
 <td width="259"><strong><b>British Columbia</b></strong></td>
 <td width="247">1,881,969</td>
 <td width="203">6.6</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Yukon</b></strong></td>
 <td width="247">15,215</td>
 <td width="203">7.8</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Northwest Territories</b></strong></td>
 <td width="247">14,981</td>
 <td width="203">1.9</td>
-</tr>
-<tr>
 <td width="259"><strong><b>Nunavut</b></strong></td>
 <td width="247">9,819</td>
 <td width="203">13.4</td>
-</tr>
 </tbody>
 </table>
 <p>努纳武特地区（Nunavut）人口增长全国居首，这要归功于该地区的生育率全国最高。努纳武特地区的女性，平均生育2.9个孩子，而全国平均水平为1.6个孩子。自努纳武特于1999年成立以来，人口数首次超过了育空地区。</p>
 <p><strong><b>全国、各省和地区2016年普查人口数及增长率一览</b></strong></p>
-<table>
-<tbody>
-<tr>
-<td width="259"><strong><b>?</b></strong></td>
 <td width="96"><strong><b>人口数</b></strong></td>
 <td width="203"><strong><b>2011</b></strong><strong><b>～</b></strong><strong><b>?2016</b></strong><strong><b>增幅</b></strong>（%）</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Canada</b></strong></td>
 <td width="96"><strong><b>35,151,728</b></strong></td>
 <td width="203"><strong><b>5.0</b></strong></td>
-</tr>
-<tr>
-<td width="259"><strong><b>Newfoundland and Labrador</b></strong></td>
 <td width="96">519,716</td>
 <td width="203">1.0</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Prince Edward Island</b></strong></td>
 <td width="96">142,907</td>
-<td width="203">1.9</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Nova Scotia</b></strong></td>
 <td width="96">923,598</td>
 <td width="203">0.2</td>
-</tr>
-<tr>
-<td width="259"><strong><b>New Brunswick</b></strong></td>
 <td width="96">747,101</td>
 <td width="203">-0.5</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Quebec</b></strong></td>
 <td width="96">8,164,361</td>
 <td width="203">3.3</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Ontario</b></strong></td>
 <td width="96">13,448,494</td>
 <td width="203">4.6</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Manitoba</b></strong></td>
 <td width="96">1,278,365</td>
-<td width="203">5.8</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Saskatchewan</b></strong></td>
 <td width="96">1,098,352</td>
 <td width="203">6.3</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Alberta</b></strong></td>
 <td width="96">4,067,175</td>
 <td width="203">11.6</td>
-</tr>
-<tr>
-<td width="259"><strong><b>British Columbia</b></strong></td>
 <td width="96">4,648,055</td>
-<td width="203">5.6</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Yukon</b></strong></td>
 <td width="96">35,874</td>
-<td width="203">5.8</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Northwest Territories</b></strong></td>
 <td width="96">41,786</td>
 <td width="203">0.8</td>
-</tr>
-<tr>
-<td width="259"><strong><b>Nunavut</b></strong></td>
 <td width="96">35,944</td>
 <td width="203">12.7</td>
-</tr>
-</tbody>
-</table>
 <p>加拿大统计局把人口普查大都市区（CMA）定义为一个或多个城镇，都市中心50,000人口，总计至少100,000人口。<strong><b>人口普查大都市区人口增长率超加国平均水平者列表如下：</b></strong></p>
-<table>
-<tbody>
-<tr>
 <td width="338"><strong><b>?</b></strong></td>
-<td width="203"><strong><b>2011</b></strong><strong><b>～</b></strong><strong><b>?2016</b></strong><strong><b>增幅</b></strong>（%）</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Calgary, Alta.</b></strong></td>
 <td width="203">14.6</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Edmonton, Alta.</b></strong></td>
 <td width="203">13.9</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Saskatoon, Sask.</b></strong></td>
 <td width="203">12.5</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Regina, Sask.</b></strong></td>
 <td width="203">11.8</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Lethbridge, Alta.</b></strong></td>
 <td width="203">10.8</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Kelowna, B.C.</b></strong></td>
 <td width="203">8.4</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Guelph, Ont.</b></strong></td>
 <td width="203">7.7</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Victoria, B.C.</b></strong></td>
 <td width="203">6.7</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Oshawa, Ont.</b></strong></td>
-<td width="203">6.6</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Winnipeg, Man.</b></strong></td>
-<td width="203">6.6</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Vancouver, B.C.</b></strong></td>
 <td width="203">6.5</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Toronto, Ont.</b></strong></td>
 <td width="203">6.2</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Abbotsford–Mission, B.C.</b></strong></td>
 <td width="203">6.1</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Kitchener–Cambridge–Waterloo, Ont.</b></strong></td>
 <td width="203">5.5</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Ottawa–Gatineau, Que. and Ont.</b></strong></td>
-<td width="203">5.5</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Barrie, Ont.</b></strong></td>
 <td width="203">5.4</td>
-</tr>
-<tr>
 <td width="338"><strong><b>Canada</b></strong></td>
-<td width="203"><strong><b>5.0</b></strong></td>
-</tr>
-</tbody>
-</table>
 <p><strong><b>?十大人口密集城市</b></strong></p>
-<table>
-<tbody>
-<tr>
 <td width="207"><strong><b>城市</b></strong></td>
 <td width="127"><strong><b>所属大都市区</b></strong></td>
 <td width="86"><strong><b>人口</b></strong></td>
 <td width="194"><strong><b>密度（人/平方公里）</b></strong></td>
-</tr>
-<tr>
 <td width="207"><strong><b>Vancouver, B.C.</b></strong></td>
 <td width="127">Vancouver</td>
 <td width="86">631,486</td>
 <td width="194">5,492.6</td>
-</tr>
-<tr>
 <td width="207"><strong><b>Westmount, Que.</b></strong></td>
 <td width="127">Montréal</td>
 <td width="86">20,312</td>
 <td width="194">5,024.9</td>
-</tr>
-<tr>
 <td width="207"><strong><b>C?te-Saint-Luc, Que.</b></strong></td>
-<td width="127">Montréal</td>
 <td width="86">32,448</td>
 <td width="194">4,662.5</td>
-</tr>
-<tr>
 <td width="207"><strong><b>Montréal, Que.</b></strong></td>
-<td width="127">Montréal</td>
 <td width="86">1,704,694</td>
 <td width="194">4,662.1</td>
-</tr>
-<tr>
 <td width="207"><strong><b>New Westminster, B.C.</b></strong></td>
-<td width="127">Vancouver</td>
 <td width="86">70,996</td>
 <td width="194">4,543.4</td>
-</tr>
-<tr>
 <td width="207"><strong><b>North Vancouver, B.C.</b></strong></td>
-<td width="127">Vancouver</td>
 <td width="86">52,898</td>
 <td width="194">4,465.1</td>
-</tr>
-<tr>
 <td width="207"><strong><b>Victoria, B.C.</b></strong></td>
 <td width="127">Victoria</td>
 <td width="86">85,792</td>
 <td width="194">4,405.8</td>
-</tr>
-<tr>
 <td width="207"><strong><b>Toronto, Ont.</b></strong></td>
 <td width="127">Toronto</td>
 <td width="86">2,731,571</td>
 <td width="194">4,334.4</td>
-</tr>
-<tr>
 <td width="207"><strong><b>White Rock, B.C.</b></strong></td>
-<td width="127">Vancouver</td>
 <td width="86">19,952</td>
 <td width="194">3,893.1</td>
-</tr>
-<tr>
 <td width="207"><strong><b>Hampstead, Que.</b></strong></td>
-<td width="127">Montréal</td>
 <td width="86">6,973</td>
 <td width="194">3,884.2</td>
-</tr>
-</tbody>
-</table>
 <p><strong><b>备注：数据源自统计局</b></strong></p>
 <p>今年加统计局还将陆续公布六份报告，即2016年人口普查之年龄与性别、家庭、收入、移民、教育和语言报告。</p>
 <p>责任编辑：滕冬育</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/11/n8190605.md#1">2016年加拿大杰出移民：从护士到“中侨”CEO</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/10/6/n8370322.md#1">加拿大最大移民来源国排行 中国降至第四</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/5/n8667407.md#1">加拿大担保父母移民申请开始登记</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/5/n8670092.md#1">加拿大打击婚姻移民造假似见成效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/2/1/n8767599.md#1">加拿大没打算开大门 移民部：不增难民额度</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/2/2/n8767793.md#1">受新政影响 美高科技人才要移民加拿大？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/2/6/n8782977.md#1">移民加拿大 哪些礼仪要注意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/2/6/n8783308.md#1">回中国工作 华人丢加拿大移民身份</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898137.md#1">民调：在不同餐厅就餐 加拿大人视情况给小费</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898141.md#1">加拿大税局考虑公布骗税者黑名单</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000879.md#1" target="_blank">共产暴政录：文革中究竟死了多少人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/7/n10835295.md#1" target="_blank">中华传统文化之叹——消逝的城墙（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892027.md#1">他的才思从哪里来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897322.md#1">【菁英论坛】习政权最虚弱状态 惧政敌胜于民变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897103.md#1">【十字路口】跨年特别节目：2022年世界之最</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898142.md#1">【舞蹈】美国飞天大学舞蹈系中国古典舞基本功考试 中班 男生（2022年12月）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896722.md#1">【翻墙必看】传中共上将染疫 吃特效药身亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897095.md#1">岳山：习讲话不算数？七学者吁救民企 文章下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/19/n13887450.md#1">七种商品不再有 今年Costco有哪几个变化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896835.md#1">台娱圈新年首发喜弹 翁立友“已登记”不宴客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897308.md#1">蒙古族歌王拉苏荣病亡 曾多次为中共党魁演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897346.md#1">港星万梓良现身大陆商演 步履不稳需众人搀扶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896444.md#1">李钟硕与IU公开恋情 已交往4个多月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895820.md#1">周晓涵要求打戏来真的 曝陈亚兰不照剧本演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896498.md#1">党媒终于承认染疫后遗症 心肌炎多发于中青年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897182.md#1">新年伊始 世界各地有哪些奇特的传统？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897460.md#1">房贷利率连续下跌 11月售房量创12年来最低</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/20/n13888098.md#1">人际关系的隐形力量 “信任”是最重要因素</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/8/n8788756.htm">加拿大移民爱扎堆大都市 周边地区也受捧</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/17/2/8/n8788756.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/8/n8788756.htm">加拿大移民爱扎堆大都市 周边地区也受捧</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/17/2/8/n8788756.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
